Fix manufacturer box not showing correctly the select box

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -206,6 +206,7 @@ section.material
     h3
       margin-bottom: 20px
   .manufacturer
+    margin-bottom: 100px
     td 
       padding: 2px 8px 2px 0px
       width: 80%
